# Opencode

./: .gitignore  README.md  pyproject.toml
IDP_Project/: .gitignore  README.md  app.py  environment_presets.json  requirements.txt
IDP_Project/Sorting-AI-Code/: requirements.txt.txt  run_deep_bench.py
IDP_Project/hardware/: zone1234.ino
IDP_Project/src/: changefocallength.py  coloranddetail.py  forvideovision.py  learning.py  mainapp.py  run_deep_bench.py  vision.py
src/my_project/: main.py
tests/: test_example.py
